<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="simo.com.alco.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:paddingRight="0dp"
            android:text="@string/regEnterEmailAndPass"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/regEnterMail"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/regEnterPass"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/regPasswordHint"
            android:textSize="12sp" />

        <Switch
            android:id="@+id/option_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:checked="true"
            android:text="@string/regSubscribe" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/regSubscribeHint"
            android:textSize="12sp" />

        <Button
            android:id="@+id/registrationBtn"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="#4cd3c9"
            android:text="@string/regRegBtnText"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="#4cd3c9"
            android:stateListAnimator="@null"
            android:text="@string/regCancel" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="invisible" />

    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>